--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+
+
+  <!-- Twitter Meta Card   -->
+  <meta property="og:image" src="/src/assets/HimanshuS.png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="512">
+  <meta property="og:description"
+    content="Code to Career: Explore the Journeys of Successful Tech Professionals by exploring their case studies about their journey.">
+  <meta property="og:title" content="Tech MasterMind">
+
   <title>Tech MasterMind</title>
 </head>
 
