--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-STQTJD91ZE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-STQTJD91ZE');
+  </script>
+
+  
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="../Website/src/assets/test.svg" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,12 +25,16 @@
 
 
   <!-- Twitter Meta Card   -->
-  <meta property="og:image" src="/src/assets/HimanshuS.png">
+  <meta property="og:url" content="https://techmastermind.ca/">
+  <meta property="og:image" src="/src/assets/test.svg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="512">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="og:title" content="Tech MasterMind">
   <meta property="og:description"
     content="Code to Career: Explore the Journeys of Successful Tech Professionals by exploring their case studies about their journey.">
-  <meta property="og:title" content="Tech MasterMind">
+  <meta property="og:creator" content="@Himanshu_10S">
+  <meta property="og:image" src="/src/assets/test.svg">
 
   <title>Tech MasterMind</title>
 </head>
