--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="../Website/src/assets/test.svg" />
+  <link rel="icon" type="image/svg+xml" href="/tabIcon.svg" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
 
   <!-- Twitter Meta Card   -->
   <meta property="og:url" content="https://techmastermind.ca/">
-  <meta property="og:image" src="/src/assets/test.svg">
+  <meta property="og:image" src="/public/tabIcon.svg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="512">
   <meta property="twitter:card" content="summary_large_image">
@@ -34,7 +34,6 @@
   <meta property="og:description"
     content="Code to Career: Explore the Journeys of Successful Tech Professionals by exploring their case studies about their journey.">
   <meta property="og:creator" content="@Himanshu_10S">
-  <meta property="og:image" src="/src/assets/test.svg">
 
   <title>Tech MasterMind</title>
 </head>
