--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Twitter Meta Card   -->
   <meta property="og:url" content="https://techmastermind.ca/">
-  <meta property="og:image" src="/public/tabIcon.svg">
+  <meta property="og:image" src="/public/Group 1.svg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="512">
   <meta property="twitter:card" content="summary_large_image">
