--- a/index.html
+++ b/index.html
@@ -13,14 +13,24 @@
     gtag('config', 'G-STQTJD91ZE');
   </script>
 
-  
+
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/tabIcon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/TMM_LOGO.svg" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
 
@@ -33,12 +43,12 @@
   <meta property="og:title" content="Tech MasterMind">
   <meta property="og:description"
     content="Code to Career: Explore the Journeys of Successful Tech Professionals by exploring their case studies about their journey.">
-  <meta property="og:creator" content="@Himanshu_10S">
+  <meta property="og:creator" contFent="@Himanshu_10S">
 
-  <title>Tech MasterMind</title>
+  <title>Tech MasterMind: Your Guide to Success in the Tech Industry</title>
 </head>
 
-<body>
+<body style="background-color: #F8FAFC">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
