Updated the Icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/TMM_LOGO.svg" />
+  <link rel="icon" type="image/svg+xml" href="/Tab Icon.svg" />
+  <link rel="shortcut icon" href="/Website Icon.svg" type="image/x-icon" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
