--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech MasterMind</title>
+    <title>Tech MasterMind | Your Guide to Success in the Tech Industry</title>
   </head>
   <body class="bg-[#0E1217]">
     <div id="root"></div>
