--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech MasterMind | Your Guide to Success in the Tech Industry</title>
-  </head>
-  <body class="bg-[#0E1217]">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Twitter Meta Card   -->
+  <meta property="og:url" content="https://techmastermind.ca/">
+  <meta property="og:image" src="/public/Group 1.svg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="512">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="og:title" content="Tech MasterMind">
+  <meta property="og:description"
+    content="Code to Career: Explore the Journeys of Successful Tech Professionals by exploring their case studies about their journey.">
+  <meta property="og:creator" contFent="@Himanshu_10S">
+
+
+  <title>Tech MasterMind | Your Guide to Success in the Tech Industry</title>
+</head>
+
+<body class="bg-[#0E1217]">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
