--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-STQTJD91ZE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-STQTJD91ZE');
+  </script>
+
   <!-- Twitter Meta Card   -->
   <meta property="og:url" content="https://techmastermind.ca/">
-  <meta property="og:image" src="/public/Group 1.svg">
+  <meta property="og:image" src="/Logo.svg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="512">
   <meta property="twitter:card" content="summary_large_image">
